--- a/home_images/home.html
+++ b/home_images/home.html
@@ -62,7 +62,7 @@
 
 <div class="ps" style="margin-top: 50px;">
 	  <a href="../K53_Controls_Test/test_code.html">
-	<img src="star.jpg" class="center" style="width: 100px; height: 100px;" id="controls_star">
+	<img src="star.jpg" class="center" style="width: 1px; height: 1px;" id="controls_star">
   </a>
 	
   <a href="../K53_Controls_Test/test_code.html">
@@ -77,7 +77,7 @@
 
 		<div class="ps">
 		  <a href="../K53_Sign_Test/road_sign_tests.html">
-	<img src="star.jpg" class="star"  id="signs_star">
+	<img src="star.jpg" class="star" style="width: 1px; height: 1px;" id="signs_star">
   </a>
 			<a href="../K53_Sign_Test/road_sign_tests.html"><img src="K53_Signs_Test.PNG"></a>
 		</div>	
@@ -90,7 +90,7 @@
 			  
 		<div class="ps">
 <a href="../K53_Rules_Test/road_rules_tests.html">
-	<img src="star.jpg" class="center"  id="rules_star">
+	<img src="star.jpg" class="center" style="width: 1px; height: 1px;" id="rules_star">
   </a>
 			<a href="../K53_Rules_Test/road_rules_tests.html"><img src="K53_Rules_Test.PNG"></a>
 		</div>
@@ -103,7 +103,7 @@
 
 		<div class="ps">
 				  <a href="../K53_Book_Test/book_test_code.html">
-	<img src="star.jpg" class="center"  id="book_star">
+	<img src="star.jpg" class="center" style="width: 1px; height: 1px;" id="book_star">
   </a>
 			<a href="../K53_Book_Test/book_test_code.html"><img src="K53_Book_Test.PNG"></a>
 		</div>	
@@ -115,7 +115,7 @@
 
 		<div class="ps" >
 					  <a href="../K53_Learners_Test/learners_test_code.html">
-	<img src="star.jpg" class="center"  id="learners_star">
+	<img src="star.jpg" class="center" style="width: 1px; height: 1px;" id="learners_star">
   </a>
 			<a href="../K53_Learners_Test/learners_test_code.html"><img src="K53_Learners_Test.PNG"></a>
 		</div>
@@ -376,6 +376,7 @@ if ('serviceWorker' in navigator) {
 	  learnersCanvas.style.margin = 1 + "px";
   }
 </script>
+
 
 
 
