--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -24,7 +24,12 @@
     <h3>Question 1 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" 
+   target="_blank" 
+   style="color: blue; text-decoration: none;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
+</a>
+
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1909,6 +1914,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
