--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -24,11 +24,12 @@
     <h3>Question 1 of 15</h3>
   </div>
   <div class="time_score">
-    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" 
+<a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" 
    target="_blank" 
    style="color: blue; text-decoration: none;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R100
+      🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span>
 </a>
+
 
 		<div class="container">
 			<div id="branding2">
@@ -1914,6 +1915,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
