--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -125,7 +125,7 @@
     <h3>Question 2 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -210,7 +210,7 @@
     <h3>Question 3 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -295,7 +295,7 @@
     <h3>Question 4 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -380,7 +380,7 @@
     <h3>Question 5 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -432,7 +432,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -508,7 +508,7 @@
     <h3>Question 6 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -593,7 +593,7 @@
     <h3>Question 7 of   15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -678,7 +678,7 @@
     <h3>Question 8 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -763,7 +763,7 @@
     <h3>Question 9 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -848,7 +848,7 @@
     <h3>Question 10 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -902,7 +902,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -971,7 +971,7 @@
     <h3>Question 11 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1056,7 +1056,7 @@
     <h3>Question 12 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1141,7 +1141,7 @@
     <h3>Question 13 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1226,7 +1226,7 @@
     <h3>Question 14 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1311,7 +1311,7 @@
     <h3>Question 15 of 15</h3>
   </div>
   <div class="time_score">
-    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1363,7 +1363,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1915,6 +1915,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
