--- a/K53_Sign_Test/road_sign_test1.html
+++ b/K53_Sign_Test/road_sign_test1.html
@@ -24,7 +24,12 @@
     <h3>Question 1 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" 
+   target="_blank" 
+   style="color: blue; text-decoration: none; margin: 5px;">
+      🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span>
+</a>
+
 
     <div class="container">
       <div id="branding">
@@ -106,7 +111,12 @@
     <h3>Question 2 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" 
+   target="_blank" 
+   style="color: blue; text-decoration: none; margin: 5px;">
+      🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span>
+</a>
+
 
     <div class="container">
       <div id="branding">
@@ -188,7 +198,7 @@
     <h3>Question 3 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -270,7 +280,7 @@
     <h3>Question 4 of 30</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -352,7 +362,7 @@
     <h3>Question 5 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -401,7 +411,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -473,7 +483,7 @@
     <h3>Question 6 of 30</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -555,7 +565,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -637,7 +647,7 @@
     <h3>Question 8 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -719,7 +729,7 @@
     <h3>Question 9 of 30</h3>
   </div>
   <div class="time_score">
- <p class="niches"></p>
+ <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -801,7 +811,7 @@
     <h3>Question 10 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -852,7 +862,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
- <p class="niches"></p>
+ <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -921,7 +931,7 @@
     <h3>Question 11 of 30</h3>
   </div>
   <div class="time_score">
- <p class="niches"></p>
+ <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1003,7 +1013,7 @@
     <h3>Question 12 of 30</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1085,7 +1095,7 @@
     <h3>Question 13 of 30</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1167,7 +1177,7 @@
     <h3>Question 14 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1249,7 +1259,7 @@
     <h3>Question 15 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1298,7 +1308,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1395,7 +1405,7 @@
     <h3>Question 16 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1487,7 +1497,7 @@
     <h3>Question 17 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1569,7 +1579,7 @@
     <h3>Question 18 of 30</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1651,7 +1661,7 @@
     <h3>Question 19 of 30</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1733,7 +1743,7 @@
     <h3>Question 20 of 30</h3>
   </div>
   <div class="time_score">
- <p class="niches"></p>
+ <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1784,7 +1794,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1851,7 +1861,7 @@
     <h3>Question 21 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1933,7 +1943,7 @@
     <h3>Question 22 of   30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2015,7 +2025,7 @@
     <h3>Question 23 of 30</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2097,7 +2107,7 @@
     <h3>Question 24 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2179,7 +2189,7 @@
     <h3>Question 25 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2229,7 +2239,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2299,7 +2309,7 @@
     <h3>Question 26 of 30</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2381,7 +2391,7 @@
     <h3>Question 27 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2463,7 +2473,7 @@
     <h3>Question 28 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2545,7 +2555,7 @@
     <h3>Question 29 of 30</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2596,7 +2606,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
- <p class="niches"></p>
+ <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2664,7 +2674,7 @@
     <h3>Question 30 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -3247,6 +3257,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
