--- a/K53_Sign_Test/road_sign_test4.html
+++ b/K53_Sign_Test/road_sign_test4.html
@@ -24,7 +24,12 @@
     <h3>Question 1 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" 
+   target="_blank" 
+   style="color: blue; text-decoration: none; margin: 5px;">
+      🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span>
+</a>
+
 
     <div class="container">
       <div id="branding">
@@ -106,7 +111,7 @@
     <h3>Question 2 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -188,7 +193,7 @@
     <h3>Question 3 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -270,7 +275,7 @@
     <h3>Question 4 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -352,7 +357,7 @@
     <h3>Question 5 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -401,7 +406,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -474,7 +479,7 @@
     <h3>Question 6 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -556,7 +561,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -638,7 +643,7 @@
     <h3>Question 8 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -720,7 +725,7 @@
     <h3>Question 9 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -802,7 +807,7 @@
     <h3>Question 10 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -853,7 +858,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -921,7 +926,7 @@
     <h3>Question 11 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1003,7 +1008,7 @@
     <h3>Question 12 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1085,7 +1090,7 @@
     <h3>Question 13 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1167,7 +1172,7 @@
     <h3>Question 14 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1249,7 +1254,7 @@
     <h3>Question 15 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1298,7 +1303,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1396,7 +1401,7 @@
     <h3>Question 16 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1488,7 +1493,7 @@
     <h3>Question 17 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1570,7 +1575,7 @@
     <h3>Question 18 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1652,7 +1657,7 @@
     <h3>Question 19 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1734,7 +1739,7 @@
     <h3>Question 20 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1785,7 +1790,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1853,7 +1858,7 @@
     <h3>Question 21 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1935,7 +1940,7 @@
     <h3>Question 22 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2017,7 +2022,7 @@
     <h3>Question 23 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2099,7 +2104,7 @@
     <h3>Question 24 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2181,7 +2186,7 @@
     <h3>Question 25 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2231,7 +2236,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2305,7 +2310,7 @@
     <h3>Question 26 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2387,7 +2392,7 @@
     <h3>Question 27 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2469,7 +2474,7 @@
     <h3>Question 28 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2551,7 +2556,7 @@
     <h3>Question 29 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2602,7 +2607,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2671,7 +2676,7 @@
     <h3>Question 30 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -3255,6 +3260,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
